--- a/Property FW and wreath products/Bouts/Expositiones Mathematicae/Property FW and wreath products of groups_new.tex
+++ b/Property FW and wreath products/Bouts/Expositiones Mathematicae/Property FW and wreath products of groups_new.tex
@@ -46,7 +46,7 @@
 \newcommand{\setst}[2]{\{#1\ |\ #2\}}
 %
 %
-\title{property~FW and wreath products of groups: a~simple approach using Schreier graphs}
+\title{Property~FW and wreath products of groups: a~simple approach using Schreier graphs}
 \author{Paul-Henry Leemann\thanks{Supported by grant 200021\textunderscore188578 of the Swiss National Fund for Scientific Research.}, Grégoire Schneeberger}
 \date{\today}
 %
@@ -66,7 +66,7 @@
 %
 %
 \begin{abstract}
-The group property~FW stands in-between the celebrated Kazdhan's property (T) and Serre's property FA. Among many characterizations, it might be defined, for finitely generated groups, as having all Schreier graphs one-ended.
+The group property~FW stands in-between the celebrated Kazdhan's property~(T) and Serre's property~FA. Among many characterizations, it might be defined, for finitely generated groups, as having all Schreier graphs one-ended.
 
 It follows from the work of Y. Cornulier that a finitely generated wreath product $G\wr_XH$ has property~FW if and only if both $G$ and $H$ have property~FW and $X$ is finite.
 The aim of this paper is to give an elementary, direct and explicit proof of this fact using Schreier graphs.
@@ -76,16 +76,16 @@ The aim of this paper is to give an elementary, direct and explicit proof of thi
 %
 %
 \section{Introduction}
-property~FW is a group property that is (for discrete groups) a weakening of the celebrated Kazdhan's property (T). It was introduced by Barnhill and Chatterji in \cite{Barnhill2008}. It is a fixed point property for actions on wall spaces or, equivalently, on CAT(0) cube complexes. Therefore it stands between property FH (fixed points on Hilbert spaces, equivalent to property (T) for discrete groups) and property FA (fixed points on \emph{arbres}\footnote{\emph{Arbres} is the french word for trees.}). It is known that all these properties are different, see  \cite{Cornulier2013} for examples of groups that distinguish them.
+Property~FW is a group property~that is (for discrete groups) a weakening of the celebrated Kazdhan's property~(T). It was introduced by Barnhill and Chatterji in \cite{Barnhill2008}. It is a fixed point property~for actions on wall spaces or, equivalently, on CAT(0) cube complexes. Therefore it stands between property~FH (fixed points on Hilbert spaces, equivalent to property~(T) for discrete groups) and property~FA (fixed points on \emph{arbres}\footnote{\emph{Arbres} is the french word for trees.}). It is known that all these properties are different, see  \cite{Cornulier2013} for examples of groups that distinguish them.
 
 When working with group properties, it is natural to ask if they are stable under ``natural'' group operations. One such operation, of great use in geometric group theory, is the wreath product, that generalizes the direct product of two groups, see Definition~\ref{Def:WreathProd}.
 
 
-In the context of properties defined by fixed points of actions, the first result concerning wreath products is due to Cherix, Martin and Valette and later refined by Neuhauser and concerns property (T).
+In the context of properties defined by fixed points of actions, the first result concerning wreath products is due to Cherix, Martin and Valette and later refined by Neuhauser and concerns property~(T).
 %
 %
 \begin{thm}[\cite{Cherix2004,Neuhauser2005a}] \label{T:Wreath_prop_T}
-Let $G,H$ be two discrete groups with $G$ non-trivial and $X$ a set on which $H$ acts. The wreath product $G \wr_X H$ has property (T) if and only if $G$ and $H$ have property (T) and $X$ is finite.
+Let $G,H$ be two discrete groups with $G$ non-trivial and $X$ a set on which $H$ acts. The wreath product $G \wr_X H$ has property~(T) if and only if $G$ and $H$ have property~(T) and $X$ is finite.
 \end{thm}
 %
 %
@@ -103,7 +103,7 @@ The aim of this note is to give an explicit and elementary proof of this fact us
 At this point, the curious reader might have two questions. First, is it possible to extend Theorem \ref{Thm:Main} beyond the realms of finitely generated groups and of actions with finitely many orbits? And secondly, is there a link between Theorems \ref{T:Wreath_prop_T} and \ref{Thm:Main}?
 In both cases, the answer is yes.
 
-This is the subject of the more technical paper \cite{LS2021}, which gives an unified proof of Theorems \ref{T:Wreath_prop_T} and \ref{Thm:Main} as well as of similar results for the Bergman's property and more.
+This is the subject of the more technical paper \cite{LS2021}, which gives an unified proof of Theorems \ref{T:Wreath_prop_T} and \ref{Thm:Main} as well as of similar results for the Bergman's property~and more.
 %
 
 \paragraph{Organization of the paper}
@@ -222,7 +222,7 @@ A finitely generated group $G$ has \emph{property~FW} if all its Schreier graphs
 It directly follows from the definition that all finite groups have property~FW, but that $\Z$ does not have it.
 In fact, if $G$ is a finitely generated group with an homomorphism onto $\Z$, then it does not have FW. Indeed, in this case $G\cong H\rtimes \Z$  for some $H$ and the Schreier graph $\Sch(G,H;S)$ is isomorphic to a Cayley graph of $\Z\cong G/H$ and hence has $2$ ends.
 
-property~FW admits many distinct characterizations that allow to define it for groups that are non-necessarily finitely generated and even for topological groups. We refer the reader to~\cite{Cornulier2013} for a survey of these characterizations.
+Property~FW admits many distinct characterizations that allow to define it for groups that are non-necessarily finitely generated and even for topological groups. We refer the reader to~\cite{Cornulier2013} for a survey of these characterizations.
 
 \subsection{Wreath products}
 %
@@ -511,7 +511,7 @@ The author also thank the anonymous referee for their valuable comments.
 
 \bibitem{Barnhill2008}
 Angela Barnhill and Indira Chatterji.
-\newblock Property ({T}) versus property {FW}.
+\newblock Property ({T}) versus property~{FW}.
 \newblock {\em Enseign. Math. (2)}, 54(1-2):16--18, 2008.
 
 \bibitem{MR1213151}
@@ -521,7 +521,7 @@ Stephen~G Brick.
 
 \bibitem{Cherix2004}
 Pierre-Alain Cherix, Florian Martin, and Alain Valette.
-\newblock Spaces with measured walls, the {H}aagerup property and property
+\newblock Spaces with measured walls, the {H}aagerup property~and property
   ({T}).
 \newblock {\em Ergodic Theory Dynam. Systems}, 24(6):1895--1908, 2004.
 
@@ -532,7 +532,7 @@ Yves {Cornulier}.
 
 \bibitem{Cornulier2011}
 Yves Cornulier and Aditi Kar.
-\newblock On property ({FA}) for wreath products.
+\newblock On property~({FA}) for wreath products.
 \newblock {\em J. Group Theory}, 14(1):165--174, 2011.
 
 \bibitem{DelaHarpe2000}
@@ -572,7 +572,7 @@ Alexander Lubotzky.
 
 \bibitem{Neuhauser2005a}
 Markus Neuhauser.
-\newblock Relative property ({T}) and related properties of wreath products.
+\newblock Relative property~({T}) and related properties of wreath products.
 \newblock {\em Math. Z.}, 251(1):167--177, 2005.
 
 \bibitem{MR1347406}
