Revision according referee
v2 : presque final sauf les axiomes
v3 : écriture des axiomes en cours

--- a/Property FW and wreath products/Medians/Enseignement Math/Referees.tex
+++ b/Property FW and wreath products/Medians/Enseignement Math/Referees.tex
@@ -138,13 +138,8 @@ We added the following ``The class of median graphs was intruduced by Nebesk\'y 
 }\\
 Indeed, the sequence $(H_n)_n$ is only decreasing. We added ``Since they are proper subgroups and $H_n\leq H_{n+1}$, we can extract an increasing subsequence $(H_{r_n})_n$ that still satisfies $G=\bigcup_n H_{r_n}$.''
 %
-\item\textit{ }\\
-
-
-
-
-
-
+\item\textit{Page 6, line -15: I do not find that the example about graphs is convincing: describing graphs as discrete metric spaces, isometries are automatically automorphisms. But the same example makes sense for cube complexes.}\\
+We changed the example from graphs to cube complexes. We also added a reference to Example 2.8.
 %
 \item\textit{Page 7, line 4: Isn’t it already the case for Bergman’s original example Sym(N) (much before Cornulier)?}\\
 Indeed. The reference was changed accordingly.
@@ -162,8 +157,8 @@ Indeed. This has been corrected following the referee's suggestion.
 \item\textit{Page 9, line -6: No need of Bass-Serre theory: Z is a tree, so the implication is obvious.}\\
 This has been corrected following the referee's suggestion.
 %
-\item\textit{}\\
-
+\item\textit{Page 10, Lemma 2.10: There is a more direct argument: Let $X$ be a metric space. Let $G(X)$ denotes the graph obtained from a vertex-set $X$ by applying the following process: for any two $x, y\in X$ add a path of length $\lfloor d(x, y)\rfloor + 1$ between $x$ and $y$. $G(X)$ is connected and the obvious inclusion $\iota\colon X\to G(X)$ is a quasi-isometric embedding. Moreover, the construction is canonical, so every group action on $X$ extends to a group action on $G(X)$, making $\iota$ equivariant. So if a group satisfying the bounded orbit property on connected graphs acts on a metric space $X$, then its induced action on $G(X)$ has bounded orbits, which implies that its orbits in $X$ are bounded.}\\
+We followed the referee's suggestion. Nevertheless, we kept the reference to Cornulier's characterization of Bergmann's property after the proof.
 
 
 
@@ -177,7 +172,8 @@ This has been clarified to ``the canonical image of $\Aut_{\mathbf S}(X)^n\rtime
 \item\textit{Page 12, line 6: Roller proved the general bounded orbit property much before Cornulier.}\\
 The reference has been updated to [Roll98].
 %
-\item\textit{Page 12, second paragraph: It could be worth mentioning that one recovers a global fixed point in the category of CAT(0) cube complexes.}\\
+\item\textit{Page 12, second paragraph: It could be worth mentioning that one recovers a global fixed point in the category of CAT(0) cube complexes.
+}\\
 Added the precision ``(i.e. complete CAT(0) spaces \emph{and in particular CAT(0) cube complexes which are either finite dimensional or locally finite})''.
 If a CCC is neither finite dimensional nor locally finite, then it is not complete and Proposition 2.12 does not apply.
 We do not know if it is possible to recover a global fixed point in the whole category of CAT(0) cube complexes, but will be happy for any reference on this fact.
