--- a/Property FW and wreath products/Medians/Enseignement Math/Version 2/Median.tex
+++ b/Property FW and wreath products/Medians/Enseignement Math/Version 2/Median.tex
@@ -650,15 +650,15 @@ For the other direction, let $X$ be a metric space. Let $G(X)$ denotes the graph
 Observe that an alternative proof of the above Lemma can be easily deduced from the following characterization of Bergman's property due to Cornulier~\cite{MR2240370}: a group $G$ has Bergman's property if and only if it has uncountable cofinality and for every generating set $T$ of $G$ the Calyey graph $\Cayley(G;T)$ is bounded.
 Details are let to the reader.
 
-While we will be able to obtain some results for a general subcategory of \PMet, we will sometimes need to restrict ourselves to subcategories  satisfying good properties. In particular, we will use three axioms: one on the existence of non-trivial $G$-action, one on the existence of finite Cartesian powers and one on infinite restricted Cartesian powers.
+While we will be able to obtain some results for a general subcategory of \PMet, we will sometimes need to restrict ourselves to subcategories  with a good notion of Cartesian powers.
 %
 %
-\begin{defn}\label{Def:NonTrivialAction}
-A subcategory \CatS{} of \PMet{} has \emph{non-trivial group actions} if for every non-trivial group $G$ there exists an \CatS-space $X$ with at least two elements which admits a non-trivial action of $G$.
-\end{defn}
+%\begin{defn}\label{Def:NonTrivialAction}
+%A subcategory \CatS{} of \PMet{} has \emph{non-trivial group actions} if for every non-trivial group $G$ there exists an \CatS-space $X$ with at least two elements which admits a non-trivial action of $G$.
+%\end{defn}
 %
 %
-Examples of categories \CatS{} with non-trivial group actions include (pseudo-) metric spaces (with $X$ a Cayley graph of $G$), (reflexive) Banach spaces and Hilbert spaces (with $X=l^2(G)$), connected median graphs and (real) trees ($X$ has one central vertex to which we attach an edge for every $g\in G$).
+%Examples of categories \CatS{} with non-trivial group actions include (pseudo-) metric spaces (with $X$ a Cayley graph of $G$), (reflexive) Banach spaces and Hilbert spaces (with $X=l^2(G)$), connected median graphs and (real) trees ($X$ has one central vertex to which we attach an edge for every $g\in G$).
 %
 %
 \begin{defn}\label{Def:Cartesian}
