--- a/Property FW and wreath products/Medians/Enseignement Math/biblio.bib
+++ b/Property FW and wreath products/Medians/Enseignement Math/biblio.bib
@@ -351,3 +351,90 @@ MRREVIEWER = {Alain Valette},
        DOI = {10.1007/s00209-005-0794-9},
        URL = {https://doi.org/10.1007/s00209-005-0794-9},
 }
+
+@article {MR2239037,
+    AUTHOR = {Bergman, George M.},
+     TITLE = {Generating infinite symmetric groups},
+   JOURNAL = {Bull. London Math. Soc.},
+  FJOURNAL = {The Bulletin of the London Mathematical Society},
+    VOLUME = {38},
+      YEAR = {2006},
+    NUMBER = {3},
+     PAGES = {429--440},
+      ISSN = {0024-6093},
+   MRCLASS = {20B30 (20B07)},
+  MRNUMBER = {2239037},
+MRREVIEWER = {H. Dugald Macpherson},
+       DOI = {10.1112/S0024609305018308},
+       URL = {https://doi.org/10.1112/S0024609305018308},
+}
+
+@article {Neb71,
+    AUTHOR = {Nebesk\'{y}, Ladislav},
+     TITLE = {Median graphs},
+   JOURNAL = {Comment. Math. Univ. Carolinae},
+  FJOURNAL = {Commentationes Mathematicae Universitatis Carolinae},
+    VOLUME = {12},
+      YEAR = {1971},
+     PAGES = {317--325},
+      ISSN = {0010-2628},
+   MRCLASS = {05.40},
+  MRNUMBER = {286705},
+MRREVIEWER = {R. J. Douglas},
+}
+
+@article{Rol98,
+	abstract = {An extended Study of Dunwoody's Construction and Sageev's Theorem},
+	archivePrefix = {arXiv},
+	arxivId = {1607.07747},
+	author = {Roller, Martin A.},
+	eprint = {1607.07747},
+	month = {jul},
+	title = {{Poc Sets, Median Algebras and Group Actions}},
+	url = {http://arxiv.org/abs/1607.07747},
+	year = {1998}
+}
+
+@article {Che00,
+    AUTHOR = {Chepoi, Victor},
+     TITLE = {Graphs of some {${\rm CAT}(0)$} complexes},
+   JOURNAL = {Adv. in Appl. Math.},
+  FJOURNAL = {Advances in Applied Mathematics},
+    VOLUME = {24},
+      YEAR = {2000},
+    NUMBER = {2},
+     PAGES = {125--179},
+      ISSN = {0196-8858},
+   MRCLASS = {57M07 (05C10 20F67)},
+  MRNUMBER = {1748966},
+       DOI = {10.1006/aama.1999.0677},
+       URL = {https://doi.org/10.1006/aama.1999.0677},
+}
+
+@incollection {Ger97,
+    AUTHOR = {Gerasimov, V. N.},
+     TITLE = {Semi-splittings of groups and actions on cubings},
+ BOOKTITLE = {Algebra, geometry, analysis and mathematical physics
+              ({R}ussian) ({N}ovosibirsk, 1996)},
+     PAGES = {91--109, 190},
+ PUBLISHER = {Izdat. Ross. Akad. Nauk Sib. Otd. Inst. Mat., Novosibirsk},
+      YEAR = {1997},
+   MRCLASS = {20F32 (57M07)},
+  MRNUMBER = {1624115},
+MRREVIEWER = {Igor Belegradek},
+}
+
+@book {Ver93,
+    AUTHOR = {Verheul, E. R.},
+     TITLE = {Multimedians in metric and normed spaces},
+    SERIES = {CWI Tract},
+    VOLUME = {91},
+ PUBLISHER = {Stichting Mathematisch Centrum, Centrum voor Wiskunde en
+              Informatica, Amsterdam},
+      YEAR = {1993},
+     PAGES = {x+136},
+      ISBN = {90-6196-420-2},
+   MRCLASS = {54E35 (05C12 46A40 46B20 46B42)},
+  MRNUMBER = {1244813},
+MRREVIEWER = {Nik Weaver},
+}
