--- a/Property FW and wreath products/Medians/Enseignement Math/biblio.bib
+++ b/Property FW and wreath products/Medians/Enseignement Math/biblio.bib
@@ -198,14 +198,12 @@ archivePrefix = {arXiv},
   MRNUMBER = {1663779},
 }
 
-@article {MR1023471,
+@book {MR1023471,
     AUTHOR = {de la Harpe, Pierre and Valette, Alain},
-     TITLE = {La propri\'{e}t\'{e} {$(T)$} de {K}azhdan pour les groupes localement
-              compacts (avec un appendice de {M}arc {B}urger)},
+     TITLE = {La propri\'{e}t\'{e} {$(T)$} de {K}azhdan pour les groupes localement compacts (avec un appendice de {M}arc {B}urger)},
+    SERIES = {Ast\'{e}risque, No. 175},
       NOTE = {With an appendix by M. Burger},
-   JOURNAL = {Ast\'{e}risque},
-  FJOURNAL = {Ast\'{e}risque},
-    NUMBER = {175},
+ PUBLISHER = {Soci\'{e}t\'{e} Math\'{e}matique de France, Paris},
       YEAR = {1989},
      PAGES = {158},
       ISSN = {0303-1179},
@@ -213,9 +211,6 @@ archivePrefix = {arXiv},
   MRNUMBER = {1023471},
 MRREVIEWER = {Michael Cowling},
 }
-
-
-
 
 
 
@@ -383,16 +378,14 @@ MRREVIEWER = {H. Dugald Macpherson},
 MRREVIEWER = {R. J. Douglas},
 }
 
-@article{Rol98,
-	abstract = {An extended Study of Dunwoody's Construction and Sageev's Theorem},
-	archivePrefix = {arXiv},
-	arxivId = {1607.07747},
-	author = {Roller, Martin A.},
-	eprint = {1607.07747},
-	month = {jul},
-	title = {{Poc Sets, Median Algebras and Group Actions}},
-	url = {http://arxiv.org/abs/1607.07747},
-	year = {1998}
+
+@phdthesis{Rol98,
+	AUTHOR = {Roller, Martin A.},
+	 TITLE = {Poc Sets, Median Algebras and Group Actions},
+  SUBTITLE = {An extended Study of Dunwoody's Construction and Sageev's Theorem},
+	SCHOOL = {Universität Regensburg},
+	  YEAR = {1998},
+	  NOTE = {Habilitation's thesis. Available at http://arxiv.org/abs/1607.07747},
 }
 
 @article {Che00,
