--- a/Property FW and wreath products/Medians/Enseignement Math/Median.tex
+++ b/Property FW and wreath products/Medians/Enseignement Math/Median.tex
@@ -206,7 +206,7 @@ Suppose that all three of $G$, $H$ and $G\wr_XH$ are finitely generated. Then th
 %
 It is straightforward to prove that the wreath product $G \wr_X H$ is finitely generated if and only if both $G$ and $H$ are finitely generated and the number of orbits of the action of $H$ on $X$ is finite.
 
-Theorem~\ref{Thm:PropFW} was first proved, using \emph{cardinal definite functions}, for arbitrary groups by Cornulier \cite{Cornulier2013}, but without the implication ``if $G \wr_X H$ has property~\FW, then $G$ has property~\FW''.
+Theorem~\ref{Thm:PropFW} was first proved, using \emph{cardinal definite functions}, for arbitrary groups by Cornulier \cite[Propositions 5.B.3 and 5.B.4]{Cornulier2013}, but without the implication ``if $G \wr_X H$ has property~\FW, then $G$ has property~\FW''.
 The authors then gave an elementary proof of it via \emph{Schreier graphs} for the specific case of finitely generated groups \cite{LS2020}.
 Y. Stalder has let us know (private communication) that, using \emph{space with walls} instead of Schreier graphs, the arguments of~\cite{LS2020} can be adapted to replace the finite generation hypothesis of Theorem~\ref{Thm:PropFW} by the condition that all three of $G$, $H$ and $X$ are at most countable.
 Finally, A. Genevois published in~\cite{2017arXiv170500834G} a proof of Theorem~\ref{Thm:PropFW} for wreath products of the form $G\wr_HH$, based on his \emph{diadem product of spaces}.
@@ -477,7 +477,7 @@ Moreover, except maybe for the implication $[\textnormal{Bergman's property}\imp
 \end{prop}
 \begin{proof}
 The implications $[\textnormal{Bergman's property}\implies \textnormal{\FB}\implies\textnormal{\FH}]$ and $[\textnormal{\FW}\implies \textnormal{\FA}\Longleftarrow\textnormal{\FR}]$ trivially follow from the fact that Hilbert spaces are reflexive Banach spaces, which are themselves metric spaces and that trees are both real trees and connected median graphs.
-The implication $[\textnormal{\FH}\implies \textnormal{\FW}]$ follows from the fact that a group $G$ has property~\FW{} if and only if any affine action on a real Hilbert space which preserves integral points has bounded orbits~\cite{Cornulier2013}.
+The implication $[\textnormal{\FH}\implies \textnormal{\FW}]$ follows from the fact that a group $G$ has property~\FW{} if and only if any affine action on a real Hilbert space which preserves integral points has bounded orbits~\cite[Proposition 7.I.3]{Cornulier2013}.
 The implication $[\textnormal{\FH}\implies \textnormal{\FR}]$ follows from the fact that real trees are median metric space, and that such spaces can be embedded into $L^1$-spaces (see for instance \cite[Theorem V.2.4]{Ver93}).
 Finally, the implication $[\textnormal{\FA}\implies\textnormal{uncountable cofinality}]$ is due to Serre~\cite{MR0476875}: if $G$ is an increasing union of subgroups $G_i$, then $\bigsqcup G/G_i$ admits a tree structure by joining any $gG_i\in G/G_i$ to $gG_{i+1}\in G/G_{i+1}$.
 The action of $G$ by multiplication on $\bigsqcup G/G_i$ is by graph isomorphisms and with unbounded orbits.
@@ -1045,7 +1045,7 @@ Since the triangle graph, which is not median, is a quotient of the $2$-regular 
 Similarly, the quotient of $\R$ by the action of $\Z/2\Z$ given by $x\mapsto-x$ is not a Banach space and hence the proof of Proposition~\ref{Prop:Extension} does not apply to properties \FH{} and \FB.
 However, the statement of Proposition~\ref{Prop:Extension} (stability under extension) remains true for properties \FH, \FB, \FW{} and \FA.
 For properties \FH{} and \FB, this follows from the fixed-point definition and the fact that a non-empty closed subset of an Hilbert space (respectively of a reflexive Banach space) is an Hilbert space (respectively a reflexive Banach space) itself.
-For property~\FW{} and \FA, see~\cite{Cornulier2013} and~\cite{MR0476875}.
+For property~\FW{} and \FA, see~\cite[Proposition 5.B.3]{Cornulier2013} and~\cite{MR0476875}.
 
 %\PHInline{Je me suis arrêté ici dans ma relecture.}
 We now state a result on infinite direct sums.
