--- a/Property FW and wreath products/Medians/Enseignement Math/Referees.tex
+++ b/Property FW and wreath products/Medians/Enseignement Math/Referees.tex
@@ -219,8 +219,8 @@ We followed the referee's suggestion to give a more axiomatic proof. However, th
 The referee's remark is correct and, depending on personal tastes, one might argue that their proof is shorter and easier.
 However, we purposely tried to give geometric proofs when possible as we think that, in this particular context, they are more enlightening than more abstract algebraic proofs.
 Nevertheless, we adde the following after the proof of Lemma 3.11.\\
-``Observe that it is also possible to derive Lemma~\ref{Lemma:Unboundedness} directly from Lemma~\ref{Lemma:Subgroup} (2), with a more algebraic proof.
-Indeed, using the notation and hypothesis of Lemma~\ref{Lemma:Unboundedness}, let $H'$ be the kernel of the action of $H$ on $X$ and $\pi\colon G\wr_XH\to H$ be the canonical projection. Then $\pi^{-1}(H')\cong \bigoplus_XG\oplus H'$ is a finite index subgroup of $G\wr_XH$ and hence has property~\BS.
+``Observe that it is also possible to derive Lemma~3.11 directly from Lemma~3.10 (2), with a more algebraic proof.
+Indeed, using the notation and hypothesis of Lemma~3.11, let $H'$ be the kernel of the action of $H$ on $X$ and $\pi\colon G\wr_XH\to H$ be the canonical projection. Then $\pi^{-1}(H')\cong \bigoplus_XG\oplus H'$ is a finite index subgroup of $G\wr_XH$ and hence has property~\BS.
 Since $G$ is a quotient of $\bigoplus_XG\oplus H'$ we conclude that it also has property~\BS.''
 %
 \item\textit{Page 17, Theorem 3.12: The implication BS$\implies$FW is a rather artificial assumption. I think you should list the few axioms you are actually using. It seems to me that there are only two: (1) an axiom about products, with possibly infinitely many factors, which could generalise the definition of unbounded Cartesian powers; (2) every non-trivial group $G$ admits a non-trivial action on a space in \textbf{S}.
@@ -238,14 +238,14 @@ If none of the $K_y$ projects onto $\Z$, all their actions on $Z$ are trivial an
 The statement of Thm 1.2 and Proposition 3.14 have been rewritten to take in account property \FR. Observe that the proofs remain unchanged (Theorem 1.2 is proved in [Cornulier-Kar] both for \FA{} and \FR).
 %
 \item\textit{Proofs of Lemma 3.7 and Theorem B: You should mention that the proofs using the characterisation in terms of subgroups are actually much shorter. In fact, they are almost exercices.}\\
-The introduction to the proof of Lemma 3.7 now reads ``It is of course possible to prove Lemma~\ref{Lemma:Cof} using the characterization of uncountable cofinality in terms of subgroups\emph{, in which case the proof is a short exercise let to the reader.} However, we find enlightening to prove it using the characterization in terms of actions on ultrametric spaces.'' (the italicized part is new).
+The introduction to the proof of Lemma 3.7 now reads ``It is of course possible to prove Lemma~3.7 using the characterization of uncountable cofinality in terms of subgroups\emph{, in which case the proof is a short exercise let to the reader.} However, we find enlightening to prove it using the characterization in terms of actions on ultrametric spaces.'' (the italicized part is new).
 A similar statement is made before the proof of Thm B.
 %
 \item\textit{In all the article: “an S-space” instead of “a S-space”?}\\
 We followed the referee's suggestion.
 %
-\item\textit{}\\
-
+\item\textit{In all the article: There are several references to results from Cornulier’s monograph. This is a rather long paper, so please add precise references.}\\
+This has been done.
 
 
 
