--- a/Property FW and wreath products/Medians/Enseignement Math/Referees.tex
+++ b/Property FW and wreath products/Medians/Enseignement Math/Referees.tex
@@ -124,12 +124,23 @@
 %
 We thank the anonymous reviewer for their careful reading of our manuscript and their insightful comments and suggestions, that we have taken into account.
 
-While we took in account all the referee’s suggestions and remarks, we will not comment below the ones concerning grammatical issues and obvious typos.
-
+We begin by explaining here the bigger changes to this new version of the article.
 Several comments (25, 26, 27, 29) of the reviewer asked for rewriting some statements and proofs with a more axiomatic and general approach. While we agree with the referee suggestion, the implementation of this change was a little more heavy than the referee suggested. In order to keep the article readable by non-specialists in category theory, we choose to add more contexts and examples before the statements of the axioms.
-In practice, this means that the material on pages 11 to 13 (starting at the § before Definition 2.11 and ending just before Subsection 2.4) is either new, or has been considerably rewritten.
-We also added at the beginning of Section 3 a table recapitulating which axioms are satisfied by the categories under consideration.
-The proof of Lemma 3.9 (new notation) has also been slightly modified to work in this general context, but the changes are small. And a small discussion has been added after the proof.
+In practice, this means that the material on pages 11 to 14 (starting at the § before Definition 2.11 and ending just before Subsection 2.4) is either new, or has been considerably rewritten and might require a careful rereading from the referee.
+
+Other consequences of the rewriting of the axioms are the following changes in Section 3:
+\begin{itemize}
+\item At the beginning of Section 3, we added\\
+``In Subsection 2.3, we defined 3 axioms that S might satisfy. Axiom (A1) simply states that a non-trivial group acts non-trivially on some S-space. Axioms (A2) and (A3) guarantee the existence of finite and infinite Cartesian powers, which should be compatible in some sense with the bornology. In Table 1 we present a short reminder on whenever these axioms are satisfied for some subcategories of PMet that were mentioned in Sections 1 and 2.''
+\item There is now Table 1 recapitulating which axioms are satisfied by the categories under consideration.
+\item The discussion after Corollary 3.8 was extended, see Item 25 below.
+\item The proof of Lemma 3.9 has also been slightly modified to work in this general context, but the changes in the proof are conceptually small, and a small discussion has been added after the proof of Lemma 3.9.
+See Item 27 below.
+\item A short discussion has been added after Theorem 3.12. See Item 29 below.
+\end{itemize}
+
+We now proceed to answer the referee's specific comments.
+While we took in account all the referee’s suggestions and remarks, we will not comment below the ones concerning grammatical issues and obvious typos.
 %
 %
 \begin{enumerate}
@@ -143,7 +154,7 @@ We added the following ``The class of median graphs was intruduced by Nebesk\'y 
 %
 \item\textit{Page 5, line -4: It is not clear that the sequence is increasing. I guess the sequence $(H_n)_n$ should be replaced with a well-chosen increasing subsequence $(H_{r_n})_n$.
 }\\
-Indeed, the sequence $(H_n)_n$ is only decreasing. We added ``Since they are proper subgroups and $H_n\leq H_{n+1}$, we can extract an increasing subsequence $(H_{r_n})_n$ that still satisfies $G=\bigcup_n H_{r_n}$.''
+Indeed, the sequence $(H_n)_n$ is only non-decreasing. We added ``Since they are proper subgroups and $H_n\leq H_{n+1}$, we can extract an increasing subsequence $(H_{r_n})_n$ that still satisfies $G=\bigcup_n H_{r_n}$.''
 %
 \item\textit{Page 6, line -15: I do not find that the example about graphs is convincing: describing graphs as discrete metric spaces, isometries are automatically automorphisms. But the same example makes sense for cube complexes.}\\
 We changed the example from graphs to cube complexes. We also added a reference to Example 2.8.
@@ -153,9 +164,17 @@ Indeed. The reference was changed accordingly.
 %
 \item\textit{Page 7, Proposition 2.5: In my copy of the article, there are TeX problems with the arrows. Is \FH$\implies$\FR{} missing?}\\
 Added the arrow, the sentence ``The implication $[\textnormal{\FH}\implies \textnormal{\FR}]$ follows from the fact that real trees are median metric space, and that such spaces can be embedded into $L^1$-spaces (see for instance [Ver93, Theorem V.2.4]).'' and the proof that the converse implication does not holds (similar to properties \FA{} versus \FW).
+
+Also added as a discussion after the proof:\\
+``In view of Proposition~2.5, two questions remain open: is the implication $[\textnormal{Bergman's property}\implies\textnormal{\FB}]$ strict, and does property~\FW{} implies property~\FR?''
 %
 \item\textit{Page 7, line -8: A triangle Coxeter group would be a more explicit example of a group with FA but not FW.}\\
-Such an example as been added after the proof of Proposition 2.5. We choose to not use this example in the proof, as it use the wall structure and not the median graph structure.
+Such an example as been added after the proof of Proposition 2.5 see below. We choose to not use this example in the proof, as it use the wall structure and not the median graph structure, work only for FA and not for F$\mathbf{R}$ and is -- in our opinion -- less self-contained.
+
+The added text about triangle groups:\\
+``The reader familiar with triangles groups $\Delta(m,l,n)=\langle a,b,c\,|\,a^2=b^2=c^2=(ab)^l=(bc)^m=(ca)^n=1\rangle$ with $l,m,n\in\{1,2,\dots\}\cup\{\infty\}$ will be happy to observe that they provide explicit examples of groups with property~\FA{} but not property~\FW.
+Indeed, if $l$, $m$ and $n$ are all three integers, then $\Delta(m,l,n)$ has property~\FA{} by [Serre, Section 6.5, Corollaire 2].
+And if $\kappa(l,m,n)\coloneqq\frac1l+\frac1m+\frac1n\leq 1$, then $\Delta(m,l,n)$ is the infinite symmetric group of a tilling of the Euclidean plane (if $\kappa(m,l,n)=1$) or of the hyperbolic plane (if $\kappa(m,l,n)<1$) and hence acts on a space with walls without fixed points, which implies that it doesn't have property FW.''
 %
 \setcounter{enumi}{11}
 \item\textit{Page 9, line -9: This is not true: the infinite dihedral group does not surject onto Z since it is generated by elements of order two. However, looking at the subcategory {Z} with orientation-preserving isometries, the property BS amounts to not having Z as a quotient.}\\
@@ -165,13 +184,13 @@ Indeed. This has been corrected following the referee's suggestion.
 This has been corrected following the referee's suggestion.
 %
 \item\textit{Page 10, Lemma 2.10: There is a more direct argument: Let $X$ be a metric space. Let $G(X)$ denotes the graph obtained from a vertex-set $X$ by applying the following process: for any two $x, y\in X$ add a path of length $\lfloor d(x, y)\rfloor + 1$ between $x$ and $y$. $G(X)$ is connected and the obvious inclusion $\iota\colon X\to G(X)$ is a quasi-isometric embedding. Moreover, the construction is canonical, so every group action on $X$ extends to a group action on $G(X)$, making $\iota$ equivariant. So if a group satisfying the bounded orbit property on connected graphs acts on a metric space $X$, then its induced action on $G(X)$ has bounded orbits, which implies that its orbits in $X$ are bounded.}\\
-We followed the referee's suggestion. Nevertheless, we kept the reference to Cornulier's characterization of Bergmann's property after the proof.
+We followed the referee's suggestion. Nevertheless, we kept the reference to Cornulier's characterization of Bergmann's property as a discussion after the proof.
 
 
 
 %
 \item\textit{Page 10, Definition 2.11: Is it a good terminology? The subcategory of bounded metric spaces has unbounded Cartesian products...}\\
-It is not! We changed it to ``bornological cartesian product''.
+It is not! We changed it to ``bornological finite Cartesian power''.
 %
 \item\textit{Page 10, Definition 2.11, item 2: Not clear. Does it mean that the obvious image of $\Aut(X)^n\rtimes\Sym(n)$ in $\Bij(X^n)$ lies in $\Aut_{\mathbf S}(X^n)$ or that $\Aut_{\mathbf S}(X^n)$ contains a subgroup isomorphic to $\Aut(X)^n\rtimes Sym(n)$? The meaning is clear from the proofs, but it should be precise already in the definition.}\\
 This has been clarified to ``the canonical image of $\Aut_{\mathbf S}(X)^n\rtimes \Sym(n)$ in $\Bij(X^n)$ lies in $\Aut_{\mathbf S}(X^n)$''.
@@ -207,25 +226,47 @@ This is now ``So let us fix an enumeration of $Y$ and let $K\coloneqq \bigoplus_
 %
 \item\textit{Page 15, Lemma 3.7: I find weird that what is proved is rather different from what is claimed in the lemma. The proof is really about uncountable cofinality and not about BS.
 A suggestion: write your lemma as a corollary of a new lemma stating that, if a semidirect product $A\rtimes B$ has uncountatble cofinality, then there exists a finite subset $S\subset A$ such that $A$ is generated by $\bigcup_{b\in B}bSb^{-1}$ (From the characterization of uncountable cofinality in terms of subgroups, this is pretty obvious.)}\\
-The general results is now Corollary 3.8, which follows from Lemma 3.7 (now written only for uncountable cofinality). However, we kept the old (geometric) proof as it is most likely to be generalized to other categories. Nevertheless, we added as an in-text remark that the algebraic proof is easier and more direct.
+The general results is now Corollary 3.8, which follows from Lemma 3.7 (now written only for uncountable cofinality). However, we kept the old (geometric) proof as it is most likely to be generalized to other categories. Nevertheless, the following appears before the proof:\\
+``It is of course possible to prove Lemma 3.7 using the characterization of uncountable cofinality in terms of subgroups, in which case the proof is a short exercise let to the reader. However, we find enlightening to prove it using the characterization in terms of actions on ultrametric spaces.''
+
+We also extended the discussion after Corollary 3.8, which now reads:\\
+``While the statement (and the proof) of Corollary~3.8.1 is expressed in terms of uncountable cofinality, it is also possible to state it and prove it for a subcategory \textbf{S} of PMet without a priori knowing if \BS{} is stronger than having uncountable cofinality.
+The main idea is to find a ``natural'' \textbf{S}-space on which $G=\bigoplus_{i\geq 1}G_i$ acts. For example, for (reflexive) Banach, Hilbert and $L^p$ spaces, one can take $\bigoplus_{i\geq 1}\ell^p(G_i)$. For connected median graphs, one takes the connected component of $\{1_{G_1},1_{G_2},\dots\}$ in $\mathcal P(\bigsqcup_{i\geq 1} G_i)$.
+For (real) trees, it is possible to put a forest structure on $\mathcal P(\bigsqcup_{i\geq 1} G_i)$ in the following way.
+For $E\in\mathcal P(\bigsqcup_{i\geq 1} G_i)$, and for each $i$ such that $E\cap G_j$ is empty for all $j\leq i$, add an edge from $E$ to $E\cup\{g\}$ for each $g\in G_i$. The graph obtained this way is a $G$-invariant subforest of the median graph on $\mathcal P(\bigsqcup_{i\geq 1} G_i)$.
+For Corollary~3.8.2 we also need that the corresponding structure is invariant by the action of $H$, which is the case of the above examples, except for the tree structure.
+
+It is also possible to give a proof of Corollary~3.8 using axioms similar to (A1)-(A3).
+More precisely, for Corollary~3.8.1 we need a weak form of the existence of seperating countable Cartesian products (for morphisms we only ask that $\bigoplus_{i\in\N} \Aut_\textbf{S}(X_i)\subseteq\Aut_\textbf{S}(\bigoplus_{i\in\N} X_i)$) and a strong version of (A1) saying that there exists an universal bound $M$ such that any non-trivial group $G$ acts on some \textbf{S}-space moving a point at distance at least $M$.
+The axiomatization of Corollary~3.8.2 is a little more complex.
+However, since in the following we will use Corollary~3.8 only for (real) trees, which do not have Cartesian powers, we will not elaborate on the details and let the proof to the interested reader.
+Instead, we will give an axiomatic proof of the following variation of Corollary~3.8.2.''
 %
 \item\textit{Page 16, Lemma 3.8: Same remark as before: it would be more natural to state the lemma about FW and to mention the result as a corollary.}\\
 See next item.
 %
 \item\textit{Page 16, Lemma 3.8: It could be interesting to formulate the lemma in greater generality. If $G$ has a non-trivial action on $Z$, then $G\wr_XH$ naturally acts on $\bigoplus_X Z$ with unbounded orbits if $X$ is infinite. So you just need your category to have a well-defined infinite product operation and the property that every non-trivial group admits a non-trivial action on one space in the category. (For FW, $G$ acts non-trivially on the tree whose vertices are $G$, $\{g\}$ ($g\in G$) and whose edges are given by inclusion.).}\\
 We followed the referee's suggestion to give a more axiomatic proof. However, the axioms they proposed are not enough, as demonstrated by the case of ultrametric spaces and uncountable cofinality. The solution is to keep the non-trivial actions axiom and to require the existence of infinite Cartesian powers that are in some rough sense able to detect the number of coordinates on which two elements of the product differs. In particular, this exclude the sup distance on the Cartesian product, and rules out ultrametric spaces.
+
+This axiomatic approach is now implemented in Subsection 2.3 which has been considerably rewritten. The proof of Lemma 3.9 (with the new numbering) now uses this axiomatic; but nevertheless is not fundamentally different from the old proof.
+
+The following discussion was added after the proof of Lemma 3.9:\\
+``As a direct corollary, we obtain that if property BS implies property BS’ for some S’ with non-trivial group actions and seperating infinite Cartesian powers (example: BS’=FW), then the conclusion of Lemma 3.9 holds even if S might not satisfy it’s premises. At contrario, it follows from Theorem 1.2 and Proposition B that Lemma 3.9 do not holds for property FR, property FA or having uncountable cofinality.''
 %
 \item\textit{Page 17: Lemma 3.11 can be seen as a direct corollary of Lemma 3.10(2). Indeed, if $H'$ is the kernel of the action of $H$ on $X$, the pre-image of $H'$ under the quotient map $G\wr_XH\to H$ is a finite-index subgroup that splits as $H'\oplus\bigoplus_XG$. The latter must have BS, but $G$ is a quotient of this group.}\\
 The referee's remark is correct and, depending on personal tastes, one might argue that their proof is shorter and easier.
 However, we purposely tried to give geometric proofs when possible as we think that, in this particular context, they are more enlightening than more abstract algebraic proofs.
 Nevertheless, we adde the following after the proof of Lemma 3.11.\\
-``Observe that it is also possible to derive Lemma~3.11 directly from Lemma~3.10 (2), with a more algebraic proof.
+``It is also possible to derive Lemma 3.11 directly from Lemma~3.10.2, with a more algebraic proof.
 Indeed, using the notation and hypothesis of Lemma~3.11, let $H'$ be the kernel of the action of $H$ on $X$ and $\pi\colon G\wr_XH\to H$ be the canonical projection. Then $\pi^{-1}(H')\cong \bigoplus_XG\oplus H'$ is a finite index subgroup of $G\wr_XH$ and hence has property~\BS.
 Since $G$ is a quotient of $\bigoplus_XG\oplus H'$ we conclude that it also has property~\BS.''
 %
 \item\textit{Page 17, Theorem 3.12: The implication BS$\implies$FW is a rather artificial assumption. I think you should list the few axioms you are actually using. It seems to me that there are only two: (1) an axiom about products, with possibly infinitely many factors, which could generalise the definition of unbounded Cartesian powers; (2) every non-trivial group $G$ admits a non-trivial action on a space in \textbf{S}.
 If $G\wr_XH$ has BS, then $X$ must be finite by Lemma 3.8 (deduced from (1) and (2)), $H$ must have BS because it is a quotient, and $G$ must have BS because of Lemma 3.11 (which is a corollary of Lemma 3.10, itself obtained from (1)). Conversely, if $X$ is finite and $G$, $H$ have BS, then $G\wr_XH$ virtually splits as a direct sum of finitely many copies of $G$ and a finite-index subgroup of $H$. But stability of BS under direct sum is given by (1).}\\
-See Item 27. More precisely, we wrote axioms (1) as the union of two axioms. The first one asserts the existence of finite Cartesian powers satisfying some compatibility condition with the bornology (diagonal(unbounded subset) is unbounded), the second one asserts the existence of infinite Cartesian powers satisfying another compatibility condition with the bornology (given two elements $x\neq y\in X$, the set $\{f\in X^I\,|\,f(i)\in\{x,y\}, f(i)=x \textnormal{ for all but finitely many i}\}$ is unbounded).
+See Item 27. More precisely, we wrote axiom (1) as the union of two axioms. The first one asserts the existence of finite Cartesian powers satisfying some compatibility condition with the bornology (diagonal(unbounded subset) is unbounded), the second one asserts the existence of infinite Cartesian powers satisfying another compatibility condition with the bornology (given two elements $x\neq y\in X$, the set $\{f\in X^I\,|\,f(i)\in\{x,y\}, f(i)=x \textnormal{ for all but finitely many i}\}$ is unbounded).
+
+We also added the following short text after the statement of Theorem 3.12:\\
+``Similarly to Lemma 3.9, the conclusion of Theorem 3.12 remains true if the hypothesis on S are replaced by “S has bornological finite Cartesian powers and property BS implies property FW”.''
 %
 \item\textit{Page 19, Lemma 3.13: The assumption of having finitely many orbits can be removed.}\\
 The assertion has been removed and the proof was extended accordingly. The new proof:\\
